--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "Lightweight Authentication API Template for rapid MVP deployment",
     "main": "src/server.js",
     "scripts": {
-        "start": "node src/server.js",
+        "start": "npm run prisma:deploy && node src/server.js",
         "dev": "nodemon src/server.js",
-        "build": "npm run prisma:generate && npm run prisma:deploy",
+        "build": "npm run prisma:generate",
         "postinstall": "prisma generate",
         "prisma:generate": "prisma generate",
         "prisma:migrate": "prisma migrate dev",
