--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "prisma:generate": "prisma generate",
         "prisma:migrate": "prisma migrate dev",
         "prisma:push": "prisma db push",
-        "prisma:deploy": "prisma migrate deploy",
+        "prisma:deploy": "prisma db push --accept-data-loss",
         "prisma:studio": "prisma studio"
     },
     "keywords": [
