--- a/env.example
+++ b/env.example
@@ -17,4 +17,5 @@ NODE_ENV="development"
 
 # Token Expiration (in minutes)
 EMAIL_VERIFICATION_EXPIRES=60
-PASSWORD_RESET_EXPIRES=30 
+PASSWORD_RESET_EXPIRES=30
+MAGIC_LINK_EXPIRES=15 
