--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "prisma:migrate": "prisma migrate dev",
         "prisma:push": "prisma db push",
         "prisma:deploy": "prisma db push --accept-data-loss",
-        "prisma:studio": "prisma studio"
+        "prisma:studio": "prisma studio",
+        "deploy:schema": "node scripts/deploy-schema.js"
     },
     "keywords": [
         "authentication",
