Fix rate limiting: Increase from 100 to 1000 requests per 15min
- Increased default rate limit from 100 to 1000 requests per 15 minutes per IP
- Made rate limiting configurable via RATE_LIMIT_MAX environment variable
- Improved rate limit error response format with better messaging
- Added standard rate limit headers for client visibility
- Updated env.example with new RATE_LIMIT_MAX variable

This should resolve 429 'Too Many Requests' errors for normal usage patterns.

--- a/env.example
+++ b/env.example
@@ -15,6 +15,9 @@ FRONTEND_BASE_URL="http://localhost:3000"
 PORT=8000
 NODE_ENV="development"
 
+# Rate Limiting
+RATE_LIMIT_MAX=1000
+
 # Token Expiration (in minutes)
 EMAIL_VERIFICATION_EXPIRES=60
 PASSWORD_RESET_EXPIRES=30
