CRITICAL: Fix extreme slowness with production performance optimizations
Performance Fixes:
- Added database connection pooling (20 connections max)
- Implemented request timeouts (30s) to prevent hanging
- Added query timeouts and connection limits
- Optimized server keep-alive settings
- Reduced body parser limits for faster processing
- Added proper database connection cleanup
- Removed debug logging for production performance
- Trust proxy settings for Railway edge optimization

This should resolve 150+ second response times down to milliseconds.

--- a/env.example
+++ b/env.example
@@ -1,6 +1,11 @@
 # Database
 DATABASE_URL="postgresql://username:password@localhost:5432/authstarter"
 
+# Database Performance (Production Optimization)
+DB_CONNECTION_LIMIT=20
+DB_POOL_TIMEOUT=10
+DB_QUERY_TIMEOUT=30
+
 # JWT Configuration
 JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
 JWT_EXPIRES_IN="1h"
