--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "cors": "^2.8.5",
         "helmet": "^7.1.0",
         "express-rate-limit": "^7.1.5",
+        "connect-timeout": "^1.9.0",
         "bcryptjs": "^2.4.3",
         "jsonwebtoken": "^9.0.2",
         "joi": "^17.11.0",
